# USBIP-Server-Android

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android-release.yml
app/: build.gradle.kts
app/src/androidTest/java/com/techphenom/usbipserver/: ExampleInstrumentedTest.kt
app/src/debug/res/drawable/: ic_app_banner_adaptive.xml  ic_banner_foreground_debug.xml  ic_launcher_foreground.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  usbipfunctions.c
app/src/main/cpp/libusb_src/libusb/: libusbi.h
app/src/main/cpp/libusb_src/libusb/os/: linux_usbfs.h
app/src/main/java/com/techphenom/usbipserver/: MainActivity.kt  MainApplication.kt  UsbIpEvent.kt  UsbIpService.kt
app/src/main/java/com/techphenom/usbipserver/data/: UsbDeviceWithState.kt  UsbIpRepository.kt  UsbIpRepositoryImpl.kt
app/src/main/java/com/techphenom/usbipserver/di/: AppModule.kt
app/src/main/java/com/techphenom/usbipserver/server/: AttachedDeviceContext.kt  UsbDeviceInfo.kt  UsbIpDeviceConstants.kt  UsbIpServer.kt
app/src/main/java/com/techphenom/usbipserver/server/protocol/: ProtocolCodes.kt
app/src/main/java/com/techphenom/usbipserver/server/protocol/initial/: CommonPacket.kt  ImportDeviceReply.kt  (+3 more)
app/src/main/java/com/techphenom/usbipserver/ui/componets/: AboutAppDialog.kt  USBDevice.kt
app/src/main/java/com/techphenom/usbipserver/ui/theme/: Color.kt  Theme.kt  TvTypography.kt  Type.kt
app/src/main/java/com/techphenom/usbipserver/ui/tv/: TvActivity.kt  TvHomeScreen.kt  TvUsbDevice.kt  TvUsbDeviceList.kt
app/src/main/java/com/techphenom/usbipserver/ui/views/: HomeScreen.kt  HomeScreenViewModel.kt
app/src/main/res/drawable/: ic_app_banner_adaptive.xml  ic_banner_background.xml  ic_banner_foreground.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  usbip_server_logo.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/techphenom/usbipserver/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
